--- a/Report/methods_figures.ipynb
+++ b/Report/methods_figures.ipynb
@@ -362,7 +362,7 @@
    "source": [
     "#group training data by title and aggregate the mean of the user_suggestion\n",
     "d = df_train.groupby([df_train[\"title\"]], as_index=False).agg({\"user_suggestion\": \"mean\"}).sort_values(by=\"user_suggestion\", ascending=False)\n",
-    "d.head()\n"
+    "d.head()"
    ]
   },
   {
@@ -461,34 +461,6 @@
     "#group by title and ensure that other relevant columns are preserved. Everything else is dropped\n",
     "df_join = df_join.groupby([\"title\"]).agg({\"user_suggestion\": \"mean\", \"tags\": \"first\"}).reset_index().sort_values(by=\"user_suggestion\", ascending=False)\n",
     "df_join.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "genre = []\n",
-    "#iterate through tags column and concat into a single dataframe\n",
-    "for i, row in ov_filtered[\"tags\"].items():\n",
-    "    df = row.replace(\"[\", \"\").replace(\"]\", \"\").replace(\"'\", \"\")\n",
-    "    ov_filtered[\"tags\"][i] = df\n",
-    "    genre = genre + df.split(\", \")\n",
-    "df_genre = pd.DataFrame(data=genre)\n",
-    "#df_overview[\"tags\"].head()\n",
-    "df_genre.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#match_df = d[\"title\"].isin(ov_filtered[\"title\"])\n",
-    "d[\"tags\"] = np.nan\n",
-    "for i, row in d.iterrows():\n",
-    "    s = row[\"title\"]\n",
-    "    tag = ov_filtered.loc[ov_filtered[\"title\"] == s]\n",
-    "    d[\"tags\"][i] = tag[\"tags\"].item()\n",
-    "d"
    ]
   },
   {
