--- a/Report/methods_figures.ipynb
+++ b/Report/methods_figures.ipynb
@@ -2070,16 +2070,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6318737682496762\n",
-      "0.7345771352330808\n",
-      "0.6315716603167194\n"
+     "ename": "NameError",
+     "evalue": "name 'encoded_str' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\dylan\\Documents\\CMPT318\\Project\\Report\\methods_figures.ipynb Cell 16\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dylan/Documents/CMPT318/Project/Report/methods_figures.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#get mean user suggestion for every tag, then plot them as x=tag and y=user_suggestion\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/dylan/Documents/CMPT318/Project/Report/methods_figures.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m sample_fps \u001b[39m=\u001b[39m encoded_str[encoded_str[\u001b[39m\"\u001b[39m\u001b[39mtags\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mcontains(\u001b[39m\"\u001b[39m\u001b[39mFPS\u001b[39m\u001b[39m\"\u001b[39m, case\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dylan/Documents/CMPT318/Project/Report/methods_figures.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m sample_rpg \u001b[39m=\u001b[39m encoded_str[encoded_str[\u001b[39m\"\u001b[39m\u001b[39mtags\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mcontains(\u001b[39m\"\u001b[39m\u001b[39mRPG\u001b[39m\u001b[39m\"\u001b[39m, case\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dylan/Documents/CMPT318/Project/Report/methods_figures.ipynb#X23sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m sample_ftp \u001b[39m=\u001b[39m encoded_str[encoded_str[\u001b[39m\"\u001b[39m\u001b[39mtags\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mcontains(\u001b[39m\"\u001b[39m\u001b[39mFree to Play\u001b[39m\u001b[39m\"\u001b[39m, case\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'encoded_str' is not defined"
      ]
     }
    ],
@@ -2095,7 +2097,8 @@
     "\n",
     "print(fps_mean)\n",
     "print(rpg_mean)\n",
-    "print(ftp_mean)"
+    "print(ftp_mean)\n",
+    "print(sample_ftp.size())"
    ]
   },
   {
